--- a/content/settings.json
+++ b/content/settings.json
@@ -3,7 +3,7 @@
   "currency_symbol": "R$",
   "primary_color": "#f5bb19",
   "theme": {
-    "bootswatch": "_"
+    "bootswatch": "litera"
   },
   "bg_color": "#f1f1f1",
   "logo": "/img/uploads/logo.png",
