Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -6,7 +6,7 @@
     "bootswatch": "united"
   },
   "bg_color": "#f1f1f1",
-  "logo": "/img/uploads/logo.png",
+  "logo": "/img/uploads/logo-nova.jpg",
   "name": "Mobbeli home",
   "short_name": "mobbelihome",
   "lang": "pt_br",
