Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -18,6 +18,6 @@
   "secondary_color": "#a3a3a3",
   "icon": "/img/uploads/logo.png",
   "store_id": 1098,
-  "description": "#646464 #d69538",
+  "description": "Almofadas, quadros, tapetes. Tudo para seu cantinho ficar mais lindo e aconchegante!",
   "large_icon": "/img/uploads/logo.png"
 }
