Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "mobbeli-home.netlify.app",
+  "domain": "www.mobbelihome.com",
   "currency_symbol": "R$",
   "primary_color": "#d69538",
   "theme": {
