Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -16,7 +16,7 @@
   "favicon": "/img/uploads/favicon.png",
   "country_code": "BR",
   "secondary_color": "#a3a3a3",
-  "icon": "/img/uploads/logo.png",
+  "icon": "/img/uploads/logo-mobbeli.jpg",
   "store_id": 1098,
   "description": "Almofadas, quadros, tapetes. Tudo para seu cantinho ficar mais lindo e aconchegante!",
   "large_icon": "/img/uploads/logo.png"
