--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#f1f1f1",
   "logo": "/img/uploads/logo.png",
-  "name": "Mobbeli home",
+  "name": "Mobbeli Home",
   "short_name": "mobbelihome",
   "lang": "pt_br",
   "currency": "BRL",
